# Voxel-Carving

./: .gitignore  CMakeLists.txt  LICENSE  README.md  result.off
.cache/clangd/index/: Eigen.h.6DE08EE1650EB75E.idx  ImplicitSurface.h.0ECA6F6197217C19.idx  MarchingCubes.h.7699264DD4DDC0B8.idx  MarchingCubes.hpp.9F727604B3D4DDB4.idx  SimpleMesh.h.881053E39F578964.idx  Volume.cpp.0798663C6BE89E6A.idx  Volume.h.18A302483F8D07A5.idx  aruco_samples_utility.hpp.4323ED76ED5978FF.idx  backgroundSub.cpp.5E01822C6F89166C.idx  camera_calibration.cpp.576C3A6040C45C2C.idx  create_aruco_board.cpp.783452CA8AEF5D5F.idx  main.cpp.085BE462529A3127.idx  pose_estimation.cpp.6C15AF9A28B8F73A.idx  pose_estimation.h.E9CCA6664FE22EA1.idx  pose_estimation_aruco_board.cpp.055EC10B662F3D72.idx  pose_estimation_aruco_board_image_list.cpp.7D5A8393EE47053E.idx
Open3D/: carve.py
Output_Open3D/: output_givenDataset.off
Src/: CMakeLists.txt  calibration.cpp  main.cpp
Test_opencv/: .~lock.Markers.odp#  CMakeLists.txt  Markers.odp
Test_opencv/.cache/clangd/index/: camera_calibration.cpp.69C09EEA9756CCB6.idx  file_input_output.cpp.582DCD1833C912B2.idx  test_opencv.cpp.0C82903DF9D29E2F.idx  test_opencv.cpp.FD76D823BBA187E9.idx
Test_opencv/data/: Test_opencv  file_output.xml  file_output.yaml
Test_opencv/src/: camera_calibration.cpp  file_input_output.cpp  test_opencv.cpp
config/: in_VID5.xml  out_camera_data.yml  out_camera_data_zhx.yml  parameters.yml  parameters_apple.yml  parameters_pineapple.yml
include/: ImplicitSurface.h  MarchingCubes.h  VoxelCarving.hpp  aruco_samples_utility.hpp  pose_estimation.h
result/: result_apple.off
src/: ImplicitSurface.h  VoxelCarving.cpp  backgroundSub.cpp  camera_calibration.cpp  create_aruco_board.cpp  create_aruco_border.cpp  main.cpp  pose_estimation.cpp  pose_estimation_aruco_board.cpp  pose_estimation_aruco_board_image_list.cpp  pose_estimation_aruco_border.cpp
