cmake_minimum_required(VERSION 3.0)
project( Test_opencv )
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} inc )
file(GLOB SRC "src/*.cpp")
add_executable( ${PROJECT_NAME} src/test_opencv.cpp )
# add_executable( Test_opencv ${SRC} )
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} )

